--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(../images/WhatsApp\ Image\ 2025-05-28\ at\ 2.06.56\ PM.jpeg)no-repeat;
+    background: url(https://ramahendawi.b-cdn.net/portfolio/images/WhatsApp%20Image%202025-11-30%20at%2011.49.36%20AM.jpeg)no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
